objects/Duty_Table__c.object
<CustomObject>
    <fields>
        <fullName>DT_Beverage_Code_Description__c</fullName>
        <label>DT: Beverage Code Description</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DT_Beverage_Code__c</fullName>
        <label>DT: Beverage Code</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DT_Duty_Per_Liter__c</fullName>
        <label>Duty Per Liter</label>
        <precision>8</precision>
        <scale>4</scale>
        <type>Currency</type>
    </fields>
    <label>Duty Table</label>
    <nameField>
        <label>Duty Table Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Duty Tables</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>